package org.kengjer.applytrack;

public class Launcher {
    public static void main(String[] args) {
        HelloApplication.main(args);
    }
}
